# tais

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pnpm-lock.yaml  replit.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
android/: gradle.properties  gradlew  settings.gradle
android/app/src/main/cpp/: llama_jni.cpp
android/app/src/main/java/com/tais/app/ai/: LlamaManager.kt
android/app/src/main/java/com/tais/app/bridge/: AndroidBridge.kt
android/app/src/main/java/com/tais/app/capacitor/: TaisBridgePlugin.kt
android/app/src/main/java/com/tais/app/engine/: AutomationEngine.kt  AutomationValidator.kt
android/app/src/main/java/com/tais/app/service/: BootReceiver.kt  TaisService.kt
android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
artifacts/api-server/src/routes/: automations.ts  chat.ts  index.ts  logs.ts  models.ts  permissions.ts  plugins.ts  settings.ts
artifacts/tais/: capacitor.config.ts  index.html  package.json
artifacts/tais/.replit-artifact/: artifact.toml
artifacts/tais/android/: build.gradle  settings.gradle  variables.gradle
artifacts/tais/android/app/: build.gradle
artifacts/tais/android/app/src/main/: AndroidManifest.xml
artifacts/tais/android/app/src/main/cpp/: CMakeLists.txt
artifacts/tais/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
artifacts/tais/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
artifacts/tais/src/: App.tsx  index.css
artifacts/tais/src/capacitor/: bridge.ts  types.ts
artifacts/tais/src/components/: error-boundary.tsx  layout.tsx
artifacts/tais/src/components/ui/: badge.tsx  button.tsx  card.tsx  field.tsx  input.tsx  progress.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  toaster.tsx  tooltip.tsx
artifacts/tais/src/hooks/: use-toast.ts
artifacts/tais/src/pages/: automations.tsx  chat.tsx  logs.tsx  models.tsx  permissions.tsx  plugins.tsx  settings.tsx
lib/api-client-react/: tsconfig.tsbuildinfo
lib/api-spec/: openapi.yaml
lib/api-zod/: tsconfig.tsbuildinfo
lib/db/: tsconfig.tsbuildinfo
lib/db/src/schema/: automations.ts  chat.ts  index.ts  logs.ts  models.ts  permissions.ts  plugins.ts  settings.ts
(+11 files in other folders)
